# cs-markdown-editor

./: README.md  _verify_step1_2.py  main.py  models.py  parser.py  pyproject.toml  requirements.txt  settings.json  styles.py
.trae/documents/: PRD.md  cursor-selection-refinement.md  cursor-selection-system-refinement.md  sidebar-refactor.md  table-refactoring-plan.md  top-tab-bar-multi-doc.md
services/: history.py  shortcuts.py
state/: __init__.py  actions.py  cursor.py
views/: __init__.py  code_block_view.py  editor.py  key_bindings.py  line_view.py  segment_view.py  settings_dialog.py  sidebar.py  status_bar.py  tab_bar.py  table_view.py  toolbar.py
